# Florence-2-FineTuning

./: .gitignore  README.md  createdataset.py  dataset_utils.py  docker-compose.yml  license  pyproject.toml  requirements.txt  temp.json  train.py  val.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/tests/: test_api.py
configs/: train_example.yaml
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/__tests__/: index.test.js
frontend/pages/: index.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dataset/: page.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/: DatasetCard.tsx  Navbar.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeProvider.tsx
notebooks/: dataset_creation.ipynb  inference.ipynb  training.ipynb
scripts/: create_dataset_cli.py  example_classification.py  example_segmentation.py  generate.py  pdf_to_images.py  train.py
src/florence/: __init__.py  config.py  dataset_utils.py  metrics.py
tests/: test_cli_dataset.py  test_config.py  test_dataset.py  test_metrics.py  test_pdf_to_images.py  test_train.py
